--- a/index.html
+++ b/index.html
@@ -22,9 +22,24 @@
     <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
   </head>
   <body>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="https://mills561.github.io">Mills 561</a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="https://mills561.github.io/"">Calendar</a></li>
+            <li><a href="https://mills561.github.io/darts">Darts</a></li>
+            <li><a href="https://mills561.github.io/chains"">Chains</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div class="container">
       <div id="header" class="row text-center">
         <h1>Mills 561 Schedule</h1>
+        <hr />
       </div>
       <div class="row" id="authorize-div" style="display: none">
         <h3>In order to view this webpage, you will need to authorize access to Google Calendar API</h3>
