--- a/darts/index.html
+++ b/darts/index.html
@@ -32,15 +32,18 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="https://mills561.github.io/darts">Darts</a></li>
+            <li><a href="https://mills561.github.io/"">Calendar</a></li>
+            <li class="active"><a href="https://mills561.github.io/darts">Darts</a></li>
+            <li><a href="https://mills561.github.io/chains"">Chains</a></li>
           </ul>
-          <form class="navbar-form">
-            <button type="submit" class="btn btn-default" ng-click="reset()">Reset</button>
-          </form>
         </div>
       </div>
     </nav>
     <div class="container">
+      <div class="row text-center">
+        <h1>Darts</h1>
+        <hr />
+      </div>
       <div class="row text-center" id="top">
         <div class="col-xs-4">
           <h3 ng-click="showHideFirstName()" ng-show="showFirstName">{{firstName}}</h3>
