Made body of all pages container fluid.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
       </div>
     </nav>
-    <div class="container">
+    <div class="container-fluid">
       <div id="header" class="row text-center">
         <h1>Mills 561 Schedule</h1>
         <hr />
