--- a/chains/index.html
+++ b/chains/index.html
@@ -38,11 +38,11 @@
         </div>
       </div>
     </nav>
-    <div class="row text-center">
-      <h1>Chain Reaction</h1>
-      <hr />
-    </div>
-    <div class="container">
+    <div class="container-fluid">
+      <div class="row text-center">
+        <h1>Chain Reaction</h1>
+        <hr />
+      </div>
       <div class="row text-center">
         <div class="col-xs-5">
           <input type="text" placeholder="Team 1" />
