--- a/darts/index.html
+++ b/darts/index.html
@@ -39,7 +39,7 @@
         </div>
       </div>
     </nav>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row text-center">
         <h1>Darts</h1>
         <hr />
