Made nav bar containers.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <nav class="navbar navbar-default">
-      <div class="container-fluid">
+      <div class="container">
         <div class="navbar-header">
           <a class="navbar-brand" href="https://mills561.github.io">Mills 561</a>
         </div>
