--- a/darts/index.html
+++ b/darts/index.html
@@ -26,7 +26,7 @@
   </head>
   <body ng-app="darts" ng-controller="myCtrl">
     <nav class="navbar navbar-default">
-      <div class="container-fluid">
+      <div class="container">
         <div class="navbar-header">
           <a class="navbar-brand" href="https://mills561.github.io">Mills 561</a>
         </div>
